# ollive-inference-logger

./: .env.example  .gitignore  ARCHITECTURE.md  Makefile  README.md  docker-compose.yml  render.yaml
backend/: Dockerfile  Dockerfile.prod  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py
backend/scripts/: seed.py  start.sh
backend/src/: config.py  database.py  deps.py  main.py
backend/src/api/: chat.py  conversations.py  dashboard.py  ingest.py  providers.py  router.py
backend/src/models/: __init__.py  conversation.py  inference_log.py  message.py
backend/src/schemas/: __init__.py  conversation.py  dashboard.py  inference_log.py  message.py
backend/src/services/: __init__.py  chat_service.py  dashboard_service.py  llm_providers.py
frontend/: Dockerfile.prod  next.config.ts  package-lock.json  package.json
k8s/: configmap.yaml  ingress.yaml  kustomization.yaml  namespace.yaml  secrets.yaml
k8s/backend/: deployment.yaml  hpa.yaml  service.yaml
k8s/frontend/: deployment.yaml  service.yaml
k8s/redis/: service.yaml  (+1 more)
scripts/: deploy-kind.sh  migrate.sh
sdk/: pyproject.toml
sdk/src/ollive_sdk/: __init__.py  client.py  context.py  decorator.py  redactor.py  transport.py  types.py
sdk/src/ollive_sdk/providers/: __init__.py  anthropic_wrapper.py  base.py  openai_wrapper.py
sdk/tests/: test_decorator.py  test_redactor.py  test_transport.py
worker/: Dockerfile  pyproject.toml
worker/src/worker/: config.py  consumer.py  database.py  health.py  main.py  matview.py  models.py  processor.py  redactor.py
worker/tests/: test_consumer.py  test_processor.py
(+32 files in other folders)
