[project]
name = "ollive-sdk"
version = "0.1.0"
description = "Lightweight inference logging SDK for LLM applications"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.10.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ollive_sdk"]
